cambios en la web

--- a/html/stast.html
+++ b/html/stast.html
@@ -59,37 +59,34 @@
         </nav>
     </header>
     <!-- Main -->
-    <main>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active position-relative">
-                    <img src="../img/design1_image1.jpg" class="d-block viewportCarousel border border-2 border-dark"
-                        alt="...">
-                    <div class="position-absolute center-position">
-                        <h1 class="text-light fs-1 fw-bold text-uppercase">Past Event</h1>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/design1_image2.jpg" class="d-block viewportCarousel border border-2 border-dark"
-                        alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/hockey2.jpg" class="d-block viewportCarousel border border-2 border-dark"
-                        alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </main>
+    <main class="flex-auto container-md p-0">
+		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active position-relative">
+					<img src="../img/cartelera de cine.jpg" class="d-block viewportCarousel border border-2 border-dark"
+						alt="jurasicc word">
+				</div>
+				<div class="carousel-item">
+					<img src="../img/cartelera 2.jpg" class="d-block viewportCarousel border border-2 border-dark"
+						alt="Event Sport">
+				</div>
+				<div class="carousel-item">
+					<img src="../img/cartelera 3.jpg" class="d-block viewportCarousel border border-2 border-dark" alt="...">
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+				data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+				data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+        <h1 class="text-light fs-1 fw-bold text-uppercase text-center p-3 mt-4">Stats</h1>
+	</main>
     <!-- Formulario -->
     <section class="container-sm container-fluid py-5 flex-auto1">
         <table class="table">
