--- a/html/contact.html
+++ b/html/contact.html
@@ -57,55 +57,46 @@
         </nav>
     </header>
     <!-- Main -->
-    <main>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active position-relative">
-                    <img src="../img/design1_image1.jpg" class="d-block viewportCarousel border border-2 border-dark"
-                        alt="...">
-                    <div class="position-absolute center-position">
-                        <h1 class="text-light fs-1 fw-bold text-uppercase">Contact</h1>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/design1_image2.jpg" class="d-block viewportCarousel border border-2 border-dark"
-                        alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/hockey2.jpg" class="d-block viewportCarousel border border-2 border-dark"
-                        alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </main>
+    <main class="flex-auto container-md p-0">
+		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active position-relative">
+					<img src="../img/contactenos1.jpg" class="d-block viewportCarousel border border-2 border-dark"
+						alt="jurasicc word">
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+				data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+				data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+        <h1 class="text-light fs-1 fw-bold text-uppercase text-center p-3 mt-4">Contact</h1>
+	</main>
     <!-- Formulario -->
-    <form class="container-sm container-fluid py-5 flex-auto1">
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <form class="container-sm container-fluid pb-5 flex-auto1 row m-auto">
+        <div class="mb-3 col-6 input-all">
+            <input type="text" required class="form-control input" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for="exampleInputEmail1" class="form-label input-label">Name</label>
         </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="exampleInputPassword1">
+        <div class="mb-3 col-6 input-all">
+            <input type="email" required class="form-control input" id="email" aria-describedby="emailHelp">
+            <label for="email" class="form-label input-label">E-mail</label>
         </div>
-        <div class="mb-3">
-            <textarea name="" id="" class="w-100" cols="30" rows="10"></textarea>
+
+        <div class="mb-3 col-12 ">
+            <textarea name="" id="" class="w-100 rounded border border-dark border-2" cols="30" rows="10" placeholder="Write..."></textarea>
         </div>
-        <div class="mb-3 form-check">
+        <div class="mb-3 form-check col-6">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary bg-success rounded-pill col-6">Submit</button>
     </form>
 
     <!-- footer -->
