--- a/html/pastEvent.html
+++ b/html/pastEvent.html
@@ -61,15 +61,15 @@
 		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active position-relative">
-					<img src="../img/jurassicWord.jpg" class="d-block viewportCarousel border border-2 border-dark"
+					<img src="../img/past1.png" class="d-block viewportCarousel border border-2 border-dark"
 						alt="jurasicc word">
 				</div>
 				<div class="carousel-item">
-					<img src="../img/hockeySport.jpg" class="d-block viewportCarousel border border-2 border-dark"
+					<img src="../img/past2.png" class="d-block viewportCarousel border border-2 border-dark"
 						alt="Event Sport">
 				</div>
 				<div class="carousel-item">
-					<img src="../img/foodMenu.jpg" class="d-block viewportCarousel border border-2 border-dark" alt="...">
+					<img src="../img/past3.jpg" class="d-block viewportCarousel border border-2 border-dark" alt="...">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -88,9 +88,9 @@
 		<section class="container-fluid container-lg py-md-4">
 			<div class="container-md container-fluid">
 				<section class="d-flex justify-content-between align-items-center row">
-					<div class="d-flex col-lg-12 col-md-12 col-sm-12">
-						<input type="text" id="searchInput" class="form-control" placeholder="search..."
-							aria-label="Recipient's username" aria-describedby="button-addon2">
+					<div class="mb-3 col-12 input-all">
+						<input type="text" required class="form-control input" id="searchInput" aria-describedby="emailHelp">
+						<label for="searchInput" class="form-label input-label">Search...</label>
 					</div>
 					<div id="checkbox" class="col-lg-12 col-md-12 col-sm-12 py-4 py-md-0">
 					</div>
