--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 		<section class="container-fluid container-lg py-md-4">
 			<div class="container-md container-fluid">
 				<section class="d-flex justify-content-between align-items-center row">
-					<div class="d-flex col-lg-12 col-md-12 col-sm-12">
-						<input type="text" id="searchInput" class="form-control" placeholder="search..."
-							aria-label="Recipient's username" aria-describedby="button-addon2">
+					<div class="mb-3 col-12 input-all">
+						<input type="text" required class="form-control input" id="searchInput" aria-describedby="emailHelp">
+						<label for="searchInput" class="form-label input-label">Search...</label>
 					</div>
 					<div id="checkbox" class="col-lg-12 col-md-12 col-sm-12 py-4 py-md-0">
 					</div>
