Cambios en la logica del filter

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="shortcut icon" href="./img/Logo Amazing Events.png" type="image/x-icon" />
 
-	<title>Home</title>
+	<title>Amanzing Event - Home</title>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
